--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 streamlit
-requests
 pandas
 numpy
-scikit-learn
-seaborn
+requests
 joblib
-google-generativeai
-
+scikit-learn
+groq
+python-dotenv
+matplotlib
+seaborn
+plotly
